apps/kubernetes/k3s/apps/file-browser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-browser
  namespace: file-browser
spec:
  selector:
    app: file-browser
  ports:
    - name: http
      port: 8080
      targetPort: 8080
