apps/kubernetes/k3s/apps/file-browser/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: file-browser
  namespace: file-browser
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`files.hughboi.cc`)
      kind: Rule
      services:
        - name: file-browser
          port: 8080
  tls:
    secretName: hughboi-tls
